# Social-Network

./: .gitignore  Procfile  README.md  cert.pem  create_admin.py  docker-compose.yml  dockerfile  key.pem  map_test.py  pyproject.toml  run.py
.github/workflows/: ci.yml
SocialNetwork/: __init__.py  models.py  routes.py
frontend/: dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.js  api.js
frontend/src/components/: AdminRegister.css  AdminRegister.js  AdminUsers.css  AdminUsers.js  ChatDialog.css  ChatDialog.js  ChatList.css  ChatList.js  Header.css  Header.js  Login.css  Login.js  MessageNotification.js  MessengerLayout.css  MessengerLayout.js  NavBar.css  NavBar.js  RegisterPage.js  UploadAvatar.css  UploadAvatar.js  UserList.css  UserList.js  UserProfile.css  UserProfile.js  webSocket.js
social_network/: addusers.py  app.py  config.py  models.py  routes.py  run.py  socialnetwork.db  test_socialnetwork.db
social_network/migrations/versions/: 08ea7dc27d89_.py  2f3e49474727_.py  4fa80c11f723_.py  52569ffa4124_.py  618e11f2f505_initial_migration.py  72839546ff75_.py  76b2d4867dcc_added_var_is_deleted_in_user_model.py  78e62dc4acfb_.py  93fdec78f709_.py  953cdf84955c_adding_models_user_post_and_comment.py  ad33e1d3cb6a_.py  ad72b739d1df_.py  c9a220fa9c0f_.py  d1e94f5917e7_.py  d7ed8b5e92b8_.py  e5c2b09f8551_.py  ea4a6f112be2_.py  (+2 more)
social_network/routes/: AuntResource.py  Comments.py  Posts.py  Users.py  __init__.py  auth.py  comments.py  messenger.py  posts.py  users.py  web_socket.py
tests/: test_auth.py  test_messenger.py
