[tool.poetry]
name = "social-network"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "social_network"}]

[tool.poetry.dependencies]
python = "3.11.11"
flask-migrate = "^4.0.7"
flask = "^3.1.0"
flask-restful = "^0.3.10"
flask-sqlalchemy = "^3.1.1"
flask-jwt-extended = "^4.7.1"
bcrypt = "^4.2.1"
flask-cors = "^5.0.0"
flask-socketio = "^5.5.1"
gunicorn = "^23.0.0"
pytest = "^8.3.4"
eventlet = "^0.39.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
